src/objects/NSN_Part__c.object
<CustomObject>
    <fields>
        <fullName>COM__c</fullName>
        <label>COM</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Area__c</fullName>
        <label>Category Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Category Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Name__c</fullName>
        <label>DB Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Full description of the part</description>
        <inlineHelpText>Full description of the part</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Records__c</fullName>
        <label>Purchase Info Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_CODE__c</fullName>
        <externalId>true</externalId>
        <label>NSN_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Part_Family__c</fullName>
        <label>Part Family</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Part_Lifecycle__c</fullName>
        <description>Status of NSN Part Number</description>
        <inlineHelpText>Status of NSN Part Number</inlineHelpText>
        <label>Lifecycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSN_Part_Recomendation__c</fullName>
        <label>Recomendation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NSN_Part_Type__c</fullName>
        <description>Part commodity type</description>
        <inlineHelpText>Part commodity type</inlineHelpText>
        <label>Part Type</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category_ID_ESN__c</fullName>
        <label>Sub Category ID (ESN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEC__c</fullName>
        <label>TEC</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <label>NSN Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>NSN_Part_Family__c</columns>
        <columns>NSN_Part_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DB_Name__c</columns>
        <columns>NSN_Part_Lifecycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NSN Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSN Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>